--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -21,11 +21,12 @@
 
 	<!-- controllers -->
 	<script src="app/controllers/mainCtrl.js"></script>
-	<!--<script src="app/controllers/userCtrl.js"></script>
-	<script src="app/controllers/offerCtrl.js"></script>-->
+	<script src="app/controllers/userCtrl.js"></script>
+	<!--<script src="app/controllers/offerCtrl.js"></script>-->
 
 	<!-- services -->
 	<script src="app/services/authService.js"></script>
+	<script src="app/services/userService.js"></script>
 
 	<!-- main Angular app files -->
 	<script src="app/app.routes.js"></script>
