UI cleanup to angular implementation

--- a/public/app/views/pages/users/single.html
+++ b/public/app/views/pages/users/single.html
@@ -12,14 +12,14 @@
 	</div>
 
 	<div class="form-group">
-		<label class="col-sm-control-label">Username</label>
+		<label class="col-sm-2 control-label">Username</label>
 		<div class="col-sm-6">
 			<input type="text" class="form-control" ng-model="user.userData.username">
 		</div>
 	</div>
 
 	<div class="form-group">
-		<label class="col-sm-control-label">Password</label>
+		<label class="col-sm-2 control-label">Password</label>
 		<div class="col-sm-6">
 			<input type="password" class="form-control" ng-model="user.userData.password">
 		</div>
