--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -34,24 +34,29 @@
 </head>
 <body ng-app="userApp" ng-controller="mainController as main">
 	<!-- NAVBAR -->
-	<header>
-		<div class="navbar navbar-inverse" ng-if="main.loggedIn">
-			<div class="container">
-				<div class="navbar-header">
-					<a href="/" class="navbar-brand"><span class="glyphicon glyphicon-fire text-danger"></span>Offers Dashboard</a>
-				</div>
-				<ul class="nav navbar-nav">
+	 <header>
+        <div class="navbar  custom-navbar " role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="e">
+                        <img src="..\..\..\assets\img\RBLogo.jpg" style="max-height:60px;">
+                    </a>
+                    <h class="navbar-brand custom-navbar">redBus Promotion CMS</a>
+                </div>
+                <ul class="nav navbar-nav" ng-if="main.loggedIn">
 					<li><a href="/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
+					<li><a href="/offers"><span class="glyphicon glyphicon-gift"></span> Offers</a></li>
 				</ul>
-				<ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right">
 					<li ng-if="!main.loggedIn"><a href="/login">Log in</a></li>
 					<li ng-if="main.loggedIn" class="navbar-text">Hello {{ main.user.name }}!</li>
 					<li ng-if="main.loggedIn"><a href="#" ng-click="main.doLogout()">Logout</a></li>
 				</ul>
-			</div>
-		</div>
-	</header>
+            </div>
+        </div>
+    </header>				
 
+    <!-- MAIN CONTAINER -->
 	<main class="container">
 		<!-- ANGULAR VIEWS -->
 		<div ng-view></div>
