--- a/public/app/views/pages/offers/all.html
+++ b/public/app/views/pages/offers/all.html
@@ -33,8 +33,8 @@
         <td>{{mogly.description}}</td>
         <td>{{mogly.validFrom}}</td>
         <td>{{mogly.validTo}}</td>
-       <td><a class="btn" ng-click="install(mogly.offerId)" href="#">
-            <span class="glyphicon glyphicon-download"></span>&nbsp;&nbsp;Edit
+       <td><a class="btn" ng-href="/offers/{{ mogly._id }}">
+            <span class="glyphicon glyphicon-download"></span>&nbsp;Edit
           </a></td>
       </tr></tbody>
     </table>
