--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -12,12 +12,13 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.1/paper/bootstrap.min.css">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/custom.css">
 
 	<!-- JS -->
 	<!-- load angular and angular-route via CDN -->
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-route.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-animate.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-animate.js"></script>
 
 	<!-- controllers -->
 	<script src="app/controllers/mainCtrl.js"></script>
@@ -39,10 +40,10 @@
         <div class="navbar  custom-navbar " role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="e">
-                        <img src="..\..\..\assets\img\RBLogo.jpg" style="max-height:60px;">
+                    <a class="logo">
+                        <img src="..\..\..\assets\img\redbuslogo_alloptions.png">
                     </a>
-                    <h class="navbar-brand custom-navbar">redBus Promotion CMS</a>
+                    <h class="navbar-brand custom-navbar">Promotion CMS</h>
                 </div>
                 <ul class="nav navbar-nav" ng-if="main.loggedIn">
 					<li><a href="/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
