--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -43,10 +43,13 @@
                     <a class="logo">
                         <img src="..\..\..\assets\img\redbuslogo_alloptions.png">
                     </a>
-                    <h class="navbar-brand custom-navbar">Promotion CMS</h>
                 </div>
+                <ul class="nav navbar-nav">
+                	<li>&nbsp;&nbsp;&nbsp;&nbsp;</li>
+                	<li><h class="navbar-brand custom-navbar">Promotion CMS</h></li>
+                </ul>
                 <ul class="nav navbar-nav" ng-if="main.loggedIn">
-					<li><a href="/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
+                	<li><a href="/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
 					<li><a href="/offers"><span class="glyphicon glyphicon-gift"></span> Offers</a></li>
 				</ul>
                 <ul class="nav navbar-nav navbar-right">
