--- a/public/app/views/pages/offers/all.html
+++ b/public/app/views/pages/offers/all.html
@@ -12,7 +12,7 @@
     <table class="table table-striped">
       <thead>
           <tr>
-            <th>offerId</th>
+            
             <th>offerCode</th>
             <th>title</th>
             <th>buttonActions</th>
@@ -21,10 +21,11 @@
             <th>description</th>
             <th>validFrom</th>
             <th>validTo</th>
+            <th>&nbsp;</th>
           </tr>
       </thead>
       <tbody><tr ng-repeat="mogly in offer.offers">
-        <td>{{mogly.offerId}}</td>
+        
         <td>{{mogly.offerCode}}</td>
         <td>{{mogly.title}}</td>
         <td>{{mogly.buttonActions}}</td>
@@ -33,9 +34,11 @@
         <td>{{mogly.description}}</td>
         <td>{{mogly.validFrom}}</td>
         <td>{{mogly.validTo}}</td>
-       <td><a class="btn" ng-href="/offers/{{ mogly._id }}">
-            <span class="glyphicon glyphicon-download"></span>&nbsp;Edit
-          </a></td>
+        <td>
+          <a class="btn" ng-href="/offers/{{ mogly._id }}">&nbsp;Edit</a>
+          <a href="#" ng-click="user.deleteOffer(offer._id)" class="btn btn-primary">Delete</a>
+          <a href="#" ng-click="user.deactivateOffer(offer._id)" class="btn btn-primary">Deactivate</a>
+        </td>
       </tr></tbody>
     </table>
 
