Bug fixes and improvements

--- a/public/app/views/pages/offers/single.html
+++ b/public/app/views/pages/offers/single.html
@@ -51,9 +51,9 @@
                 <td>
                     <div class="form-group">
                         <select ng-model="offer.offerData.country">
-                            <option value="India">India</option>
-                            <option value="Malaysia">Malaysia</option>
-                            <option value="Singapore">Singapore</option>
+                            <option value="INDIA">India</option>
+                            <option value="MALAYSIA">Malaysia</option>
+                            <option value="SINGAPORE">Singapore</option>
                         </select>
                     </div>
                 </td>
