Used AngularJS DatePicker for Offers

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -38,6 +38,7 @@
 	<!-- main Angular app files -->
 	<script src="app/app.routes.js"></script>
 	<script src="app/app.js"></script>
+	<script src="assets/js/ui-bootstrap-0.13.4.min.js"></script>
 </head>
 <body ng-app="userApp" ng-controller="mainController as main">
 	<!-- NAVBAR -->
