--- a/public/app/views/pages/offers/all.html
+++ b/public/app/views/pages/offers/all.html
@@ -12,7 +12,7 @@
     <table class="table table-striped">
       <thead>
           <tr>
-            
+            <th>Id</th>
             <th>Offer Code</th>
             <th>Title</th>
             <th>Country</th>
@@ -22,7 +22,7 @@
           </tr>
       </thead>
       <tbody><tr ng-repeat="mogly in offer.offers">
-        
+        <td>{{mogly.offerId}}</td>
         <td>{{mogly.offerCode}}</td>
         <td>{{mogly.title}}</td>
         <td>{{mogly.country}}<w/td>
