Input for buttonActions

--- a/public/app/views/pages/offers/single.html
+++ b/public/app/views/pages/offers/single.html
@@ -37,6 +37,12 @@
                     </div> -->
                     <input type="text" class="form-group" placeholder="Enter button title" ng-model="offer.offerData.buttonTitles">
                 </td>
+                <td style="width:20%">
+                    Button Action:
+                </td>
+                <td>
+                    <input type="text" class="form-group" placeholder="Enter action code" ng-model="offer.offerData.buttonActions">
+                </td>
             </tr>
             <tr></tr>
             <tr></tr>
