Banner fixes for full curd minus d :P

--- a/public/app/views/pages/banners/all.html
+++ b/public/app/views/pages/banners/all.html
@@ -12,24 +12,30 @@
     <table class="table table-striped">
       <thead>
           <tr>
-            <th>Id</th>
-            <th>Thumbnail</th>
+            
+            <th>banner Id</th>
             <th>Text</th>
+            <th>Country</th>
+            <th>Realted Offer</th>
+            <th>Thumbnail</th>
             <th>validFrom</th>
             <th>validTo</th>
             <th>&nbsp;</th>
           </tr>
       </thead>
       <tbody><tr ng-repeat="mogly in banner.banners">
+        
         <td>{{mogly.bannerId}}</td>
-        <td style="text-align:center;"><img src="{{mogly.thumbnailUrl}}" alt="Thumbnail" /></td>
         <td>{{mogly.bannerText}}</td>
-        <td>{{mogly.validFrom}}</td>
-        <td>{{mogly.validTo}}</td>
+        <td>{{mogly.country}}</td>
+        <td>{{mogly.relatedOfferId}}</td>
+        <td><img src="{{mogly.thumbnailUrl}}" style="max-height:30px"/></td>
+        <td ng-bind = "banner.getFormattedDate(mogly.validFrom)"></td>
+        <td ng-bind = "banner.getFormattedDate(mogly.validTo)"></td>
         <td>
           <a class="btn" ng-href="/banners/{{ mogly._id }}">&nbsp;Edit</a>
-          <a href="#" ng-click="user.deleteBanner(mogly._id)" class="btn btn-primary">Delete</a>
-          <a href="#" ng-click="user.deactivateBanner(mogly._id)" class="btn btn-primary">Deactivate</a>
+          <a href="#" ng-click="user.deletebanner(banner._id)" class="btn btn-primary">Delete</a>
+          <a href="#" ng-click="user.deactivateBanner(banner._id)" class="btn btn-primary">Deactivate</a>
         </td>
       </tr></tbody>
     </table>
